welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:6: error: ';' expected but ')' found.
  return (isTeen(a) || isTeen(b)) && !(isTeen(a) && isTeen(b)))
                                                              ^